refactor de mapper